--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type="module" src="exercise_00/index.js"></script>
+    <script type="module" src="exercise_01/index.js"></script>
+    <script type="module" src="exercise_02/index.js"></script>
+    <script type="module" src="exercise_03/index.js"></script>
+    <script type="module" src="exercise_04/index.js"></script>
+    <script type="module" src="exercise_05/index.js"></script>
+    <script type="module" src="exercise_06/index.js"></script>
+    <script type="module" src="exercise_07/index.js"></script>
+    <script type="module" src="exercise_08/index.js"></script>
+    <script type="module" src="exercise_09/index.js"></script>
+    <script type="module" src="exercise_10/index.js"></script>
+
 </head>
 <body>
     
